fix(wam-scala): make the LMDB fact source actually work (Phase S8)
The arity-2 lmdb(...) fact-source adaptor and its runtime smoke test had
never been able to run. Standing up an lmdbjava 0.9.0 classpath and
running it end-to-end surfaced and fixed several latent bugs; the seed ->
read -> query LMDB smoke test now passes.

Bugs fixed:

* write_runtime_source/3 placed WamRuntime in the program's `package`
  but GeneratedProgram imports it from `runtime_package`. Whenever the
  two differ — including the DEFAULT options (...core vs ...runtime) —
  the generated project failed to compile ("value runtime is not a
  member of ..."). Every prior test happened to pass the same package
  for both, hiding it. WamRuntime is now emitted into runtime_package.
  Updated the generator structural tests that asserted the buggy path.

* The LMDB test gate getenv('SCALA_LMDB_TESTS', "1") could never be true
  (getenv/2 unifies the value as an atom, never the string "1"), so the
  test was permanently skipped. The gate now keys on the variable's
  presence.

* LmdbFactSource reflection was written against a different lmdbjava API.
  Fixed: Env.Builder.open(File, EnvFlags...) + setMapSize/setMaxReaders;
  Dbi.get(Txn, key) (was Txn.get(Dbi, key)); Cursor.get(T, SeekOp);
  generic-erasure parameter types (Object, not ByteBuffer); default
  (unnamed) DB via a null name; the seeder now uses auto-txn Dbi.put.
  Added a configurable mapSize (default 1 GiB, virtual).

* Documented the JDK 16+ module flags lmdbjava needs
  (--add-opens java.base/java.nio, --add-exports java.base/sun.nio.ch)
  and wired them into the test's scala invocations.

Docs: WAM_SCALA_TARGET.md gains an LMDB section (usage, reflective
loading, JDK flags, map size); Limitations updated (LMDB arity-2
supported, arity-N is the remaining gap); roadmap + CHANGELOG updated.

The runtime_package fix is the highest-impact item — it means the
documented default options previously produced non-compiling output.

https://claude.a